--- a/discord.css
+++ b/discord.css
@@ -11,12 +11,28 @@
     background: var(--bg-color) !important;
 }
 
-.guilds-wrapper, .guild-header, .title-wrap, .private-channels .search-bar {
+.header-1tSljs, .guilds-wrapper, .guild-header, .title-wrap, .private-channels .search-bar {
     background: var(--bg-dark-color) !important;
 }
 
-.account, .btn-group > .btn, .channel-textarea-inner, .chat form, .typing {
+/* Account info */
+.channels-wrap, .container-iksrDt, .btn-group > .btn, .typing {
     background: var(--bg-light-color) !important;
+}
+
+.container-iksrDt {
+    height: 97px;
+}
+
+.container-iksrDt > .avatar-small {
+    height: 64px;
+    width: 64px;
+    background-size: 64px 64px;
+}
+
+.container-iksrDt .status {
+    height: 14px !important;
+    width: 14px !important;
 }
 
 /* Search */
@@ -39,30 +55,41 @@
     box-shadow: 4px 4px 6px rgba(0,0,0,.3) !important;
 }
 
-.user-popout {
+.userPopout-4pfA0d {
     box-shadow: 4px 4px 6px rgba(0,0,0,.3) !important;
 }
 
-.search-popout .option.selected, .user-popout .body, .channel-textarea-autocomplete-inner .active {
+.search-popout .option.selected, .userPopout-4pfA0d, .body-3rkFrF, .channel-textarea-autocomplete-inner .active {
     background: var(--bg-color) !important;
+    border: none;
     border-radius: 0 !important;
 }
 
-.user-popout .header, .user-popout .quick-message {
+.userPopout-4pfA0d, .header-3mZJcV, .userPopout-4pfA0d .quick-message {
     background: var(--bg-dark-color) !important;
     border: none;
 }
 
-.user-popout .footer {
+.userPopout-4pfA0d .footer-2J5zqP {
     display: none;
 }
 
-.avatar-popout {
+.avatar-1BXaQj {
     border-color: var(--accent-color) !important;
 }
 
 .search-popout .option::after {
     background: unset !important;
+}
+
+.member-role {
+    border-radius: 0 !important;
+    border-width: 2px !important;
+}
+
+.member-role-add {
+    background: var(--bg-light-color) !important;
+    border: none !important;
 }
 
 /* Dividers, separators */
@@ -74,8 +101,7 @@
 
 /* Fuck borders */
 
-.message-group, .channel-textarea-inner, .chat form, .channel-textarea-upload,
-.guild-header header, .title-wrap, .btn-group, .btn-group > .btn,
+.header-1tSljs, .message-group, .guild-header header, .title-wrap, .btn-group, .btn-group > .btn,
 #rtc-connection, .search-result .hit, .private-channels .search-bar {
     border-style: none !important;
     box-shadow: none !important;
@@ -86,20 +112,11 @@
     border-radius: 0;
 }
 
-.chat form {
-    margin: 0 !important;
-    height: 96px !important;
-}
-
-.account {
-    height: 95px;
-}
-
 .btn-group > .btn {
     margin-right: 10px;
 }
 
-.channel-textarea-emoji, .popout-menu-separator {
+.popout-menu-separator {
     display: none;
 }
 
@@ -165,16 +182,38 @@
 }
 
 /* User info */
-.status {
-    border-radius: 30% !important;
+.status, .avatarStatus-1g8f0K {
+    border-radius: 0 !important;
+    border: 3px solid var(--bg-color) !important;
 }
 
-.avatar-large, .avatar-small, .avatar-popout {
+.avatar-large, .avatar-small, .avatar-1BXaQj {
     border-radius: 0;
+}
+
+.avatar-small .status {
+    width: 8px;
+    height: 8px;
 }
 
 /* DM */
 .private-channels .search-bar-inner {
     background: var(--bg-light-color);
     border-radius: 0;
+}
+
+/* Text area */
+.flex-spacer, form, .channel-text-area-default, .inner-3if5cm {
+    background: var(--bg-light-color) !important;
+    border: none !important;
+}
+
+/* Separator after the upload button */
+.attachButtonDivider-3tknGJ {
+    visibility: hidden;
+}
+
+/* Emote picker */
+.sprite-3pvJkd {
+    display: none;
 }
