--- a/discord.css
+++ b/discord.css
@@ -1,24 +1,29 @@
 :root { 
-    --fg-color: #c4c4c4;
-    --bg-color: #151517;
-    --bg-dark-color: #101112;
-    --bg-light-color: #1d1d21;
-    --light-gray: #465457;
-    --accent-color: #992525;
+    --fg: #c4c4c4;
+    --bg: #151517;
+    --bg-dark: #101112;
+    --bg-light: #1d1d21;
+    --bg-hover: #26262a;
+    --accent: #992525;
+    --font-monospace: "Hack";
+}
+
+* {
+    border-radius: unset !important;
 }
 
 .friends-table, .messages-wrapper, .scroller-NXV0-d, .channel-members,
 #rtc-connection, .private-channels {
-    background: var(--bg-color) !important;
+    background: var(--bg) !important;
 }
 
 .header-1tSljs, .guilds-wrapper, .guild-header, .title-wrap, .private-channels .search-bar {
-    background: var(--bg-dark-color) !important;
+    background: var(--bg-dark) !important;
 }
 
 /* Account info */
 .channels-wrap, .container-iksrDt, .btn-group > .btn, .typing {
-    background: var(--bg-light-color) !important;
+    background: var(--bg-light) !important;
 }
 
 .container-iksrDt {
@@ -38,20 +43,16 @@
 
 /* Search */
 .search-bar, .search-result-message.hit {
-    background: var(--bg-light-color) !important;
-    border-radius: 0 !important;
+    background: var(--bg-light) !important;
 }
 
 .search-results-wrap, .search-header, .search-results .channel-name {
-    background: var(--bg-color) !important;
-    border-radius: 0 !important;
+    background: var(--bg) !important;
 }
 
 /* Popouts */
-
 .popout .popout-menu, .search-popout, .channel-textarea-autocomplete-inner, .channel-textarea-autocomplete-inner header {
-    background: var(--bg-light-color) !important;
-    border-radius: 0 !important;
+    background: var(--bg-light) !important;
     border: none !important;
     box-shadow: 4px 4px 6px rgba(0,0,0,.3) !important;
 }
@@ -61,13 +62,12 @@
 }
 
 .search-popout .option.selected, .userPopout-4pfA0d, .body-3rkFrF, .channel-textarea-autocomplete-inner .active {
-    background: var(--bg-color) !important;
+    background: var(--bg) !important;
     border: none;
-    border-radius: 0 !important;
 }
 
 .userPopout-4pfA0d, .header-3mZJcV, .userPopout-4pfA0d .quick-message {
-    background: var(--bg-dark-color) !important;
+    background: var(--bg-dark) !important;
     border: none;
 }
 
@@ -76,7 +76,7 @@
 }
 
 .avatar-1BXaQj {
-    border-color: var(--accent-color) !important;
+    border-color: var(--accent) !important;
 }
 
 .search-popout .option::after {
@@ -84,24 +84,39 @@
 }
 
 .member-role {
-    border-radius: 0 !important;
     border-width: 2px !important;
 }
 
 .member-role-add {
-    background: var(--bg-light-color) !important;
+    background: var(--bg-light) !important;
     border: none !important;
 }
 
 /* Dividers, separators */
-
 .divider, .divider span, .divider:before {
     background: transparent !important;
     border-style: none !important;
 }
 
-/* Fuck borders */
+.divider-red div {
+    background-color: var(--accent) !important;
+    opacity: 1 !important;
+    height: 2px !important;
+}
 
+.divider-red span {
+    color: var(--accent) !important;
+    background-color: var(--bg) !important;
+    font-weight: bold !important;
+}
+
+.new-messages-bar button {
+    background-color: var(--accent) !important;
+    color: var(--fg) !important;
+    font-weight: bold !important;
+}
+
+/* Fuck borders */
 .header-1tSljs, .message-group, .guild-header header, .title-wrap, .btn-group, .btn-group > .btn,
 #rtc-connection, .search-result .hit, .private-channels .search-bar {
     border-style: none !important;
@@ -110,7 +125,6 @@
 
 .private-channels .search-bar {
     height: 56px;
-    border-radius: 0;
 }
 
 .btn-group > .btn {
@@ -122,22 +136,17 @@
 }
 
 /* Scrollbar */
-
 ::-webkit-scrollbar-track-piece,
 ::-webkit-scrollbar-track-piece {
-    background: var(--bg-color) !important;
-    border-color: var(--bg-color) !important;
+    background: var(--bg) !important;
+    border-color: var(--bg) !important;
 }
 
 ::-webkit-scrollbar-thumb,
 ::-webkit-scrollbar-thumb {
-    background: var(--bg-light-color) !important;
-    border-color: var(--bg-color) !important;
-    border-radius: 0 !important;
-}
-
-.guilds-wrapper .guilds .guild .guild-inner, .search-bar, .search-popout {
-    border-radius: 0 !important;
+    background: var(--bg-light) !important;
+    border-color: var(--bg) !important;
+    border-radius: unset !important;
 }
 
 /* Channels */
@@ -146,24 +155,23 @@
 }
 
 .unread-23Kvxk {
-    border-radius: 0;
-    background: var(--accent-color);
+    background: var(--accent);
 }
 
 /* Channel hover */
-.contentHoveredText-2HYGIY {
-    border-radius: 0 !important;
-    background: var(--bg-light-color);
+.contentHoveredText-2HYGIY, .private-channels .channel:hover {
+    background: var(--bg-light);
 }
 
 /* Current channel */
-.contentSelectedText-3j5CXt, .private-channels .selected.private {
-    border-radius: 0 !important;
-    background: var(--bg-light-color);
+.contentSelectedText-3j5CXt, .private-channels .channel.selected,
+.private-channels .channel.selected a,
+.private-channels .channel:hover a {
+    background: var(--bg-light) !important;
 }
 
 .contentSelectedText-3j5CXt:before, .private-channels .channel.selected:before {
-    border-left: 4px solid var(--accent-color) !important;
+    border-left: 4px solid var(--accent) !important;
     position: absolute;
     top: 0;
     left: 0;
@@ -184,12 +192,7 @@
 
 /* User info */
 .status, .avatarStatus-1g8f0K {
-    border-radius: 0 !important;
-    border: 3px solid var(--bg-color) !important;
-}
-
-.avatar-large, .avatar-small, .avatar-1BXaQj {
-    border-radius: 0;
+    border: 3px solid var(--bg) !important;
 }
 
 .avatar-small .status {
@@ -197,15 +200,84 @@
     height: 8px;
 }
 
+.bot-tag, .botTag-1OwMgs {
+    background: var(--accent) !important;
+    color: var(--fg) !important;
+    font-weight: bold;
+}
+
+/* User profile */
+
+#user-profile-modal .header::after,
+#user-profile-modal .tab-bar-container,
+#user-profile-modal .avatar-wrapper {
+    background: var(--bg-dark) !important;
+    border: none !important;
+}
+
+#user-profile-modal .guilds.scroller {
+    background: var(--bg) !important;
+}
+
+#user-profile-modal * {
+    color: var(--fg) !important;
+}
+
+#user-profile-modal .tab-bar-item.selected {
+    border-bottom-color: var(--accent) !important;
+}
+
+#user-profile-modal .tab-bar-item {
+    border-width: 4px;
+}
+
+#user-profile-modal .connected-account {
+    background: var(--bg-light);
+    border: none !important;
+}
+
+#user-profile-modal .section {
+    border: none !important;
+}
+
+.btn.add-friend {
+    background: var(--bg-light) !important;
+}
+
+.empty {
+    background: var(--bg) !important;
+}
+
+.context-menu, .context-menu .item {
+    background: var(--bg) !important;
+    color: var(--fg) !important;
+}
+
 /* DM */
 .private-channels .search-bar-inner {
-    background: var(--bg-light-color);
-    border-radius: 0;
+    background: var(--bg-light);
+}
+
+.friends-header {
+    background: var(--bg-dark) !important;
+    border: none !important;
+}
+
+#friends {
+    background: var(--bg) !important;
+}
+
+#friends .friends-table * {
+    border: none !important;
+}
+
+.friends-column-separator {
+    visibility: hidden;
 }
 
 /* Text area */
 .flex-spacer, form, .channel-text-area-default, .inner-3if5cm {
-    background: var(--bg-light-color) !important;
+    background: var(--bg-light) !important;
     border: none !important;
 }
 
@@ -217,4 +289,52 @@
 /* Emote picker */
 .sprite-3pvJkd {
     display: none;
+}
+
+/* Code */
+pre, code {
+    background: var(--bg-light) !important;
+    color: var(--fg) !important;
+    font-family: var(--font-monospace) !important;
+    font-size: 16px;
+}
+
+pre, code.inline {
+    border-style: solid;
+    border-width: 0 0 0 4px !important;
+    border-color: var(--accent) !important;
+}
+
+/* Guilds */
+.new-messages-indicator {
+    background: var(--accent) !important;
+    opacity: 1;
+}
+
+.guilds .guild.selected:before, .guild.unread:before {
+    background: var(--accent) !important;
+    border-radius: unset !important;
+}
+
+.guild .badge {
+    background-color: var(--accent);
+    box-shadow: none;
+    font-weight: bold;
+}
+
+.friends-icon, .guild-inner, .guilds-add {
+    background-color: var(--bg-light) !important;
+    transition: all 0.3s ease !important;
+}
+
+.friends-icon:hover, .guild-inner:hover, .guilds-add:hover {
+    background-color: var(--bg-hover) !important;
+}
+
+.guilds-add {
+    border: none !important;
+}
+
+.guilds-add-inner {
+    color: var(--fg);
 }
